--- a/internship.html
+++ b/internship.html
@@ -474,15 +474,15 @@
                               <div class="card-body">
                                 Please refer to the below job descriptions of the open internship positions. The profile/function you select will be printed on your selection certificate.
                                 <br>
-                              <ul><Li> Web Development</Li>
+                              <ul><Li> Web Development & Designing</Li>
                               <Li> Mobile App Development</Li>
-                              <Li>  Data Science & Business Analytics
+                              <Li>  Data Science & Analytics
                             </Li>
-                              <Li> Content Development</Li>
+                              <Li> Social media marketing</Li>
                               <Li> Digital Marketing</Li>
-                              <Li> IoT and Computer Vision</Li>
+                              <Li> Content Writing</Li>
                               <Li>  Campus Ambassador</Li>
-                              <Li>  Talent Acquisition </Li></ul> 
+                              </ul> 
                               </div>
                           </div>
                       </div>
@@ -494,7 +494,7 @@
   
                           <div id="faq3" class="collapse" aria-labelledby="faqhead3" data-parent="#faq">
                               <div class="card-body">
-                                Open the interest form to select your internship function. If you want to change your internship function, just refill the interest form before the deadline. Your last response will be considered final if there are multiple submissions. You will receive a response receipt of the form after submission in your email, forward it to vsoc@vidyayan.in  without changing the subject line.    </div>
+                                Open the Form to select your internship function. If you want to change your internship function, just refill the interest form before the deadline. Your last response will be considered final if there are multiple submissions. You will receive a response receipt of the form after submission in your email, forward it to vsoc@vidyayan.in  without changing the subject line.    </div>
                           </div>
                       </div>
 
@@ -506,7 +506,7 @@
 
                         <div id="faq4" class="collapse" aria-labelledby="faqhead4" data-parent="#faq">
                             <div class="card-body">
-                                Please read the frequently asked questions to understand the VSoC timeline and structure.
+                                Please read the frequently asked questions in FAQs section.
                             </div>
                         </div>
                     </div>
