--- a/internship.html
+++ b/internship.html
@@ -97,7 +97,7 @@
               
               <div class="row">
                
-                <button type="button" class="btn btn-primary btn-lg btn-block"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeS-cJWU4E7eqVB6V4m-Fz3HMDBByKcN1YJ3DQ7xXyDXIRUAw/viewform" target="_blank">Apply Now for Internship</a></button>
+                <button type="button" class="btn btn-primary btn-lg btn-block"><a href="https://form.jotform.com/212595514050046" target="_blank">Apply Now for Internship</a></button>
 
                 <button type="button" class="btn btn-secondary btn-lg btn-block"><a href="#step-to-apply" style="color: #fff;"> Read Steps to Apply</a></button>
               </div>
