--- a/team.html
+++ b/team.html
@@ -204,7 +204,7 @@
                                             minim
                                             veniam.</p> -->
                                         <h5 class="font-weight-bold mb-0">Pooja Rawat</h5>
-                                        <p class="text-primary mb-0 text-muted text-small">Public Relation Team</p>
+                                        <p class="text-primary mb-0 text-muted text-small font-weight-bold">Public Relation Team</p>
                                         <ul class="list-inline-item-center mb-lg-0 my-3 scl_link_btn">
                                             <li class="list-inline-item"><a class="social-link"
                                                     href="https://www.facebook.com/vidyayan.edu"><i
